<resources>
    <string name="app_name" translatable="false">ScanCode</string>
    <string name="activity_intent_filter_action" translatable="false">com.dwexample.ACTION</string>
    <string name="datawedge_intent_key_source" translatable="false">com.symbol.datawedge.source</string>
    <string name="datawedge_intent_key_label_type" translatable="false">com.symbol.datawedge.label_type</string>
    <string name="datawedge_intent_key_data" translatable="false">com.symbol.datawedge.data_string</string>
    <string name="datawedge_intent_key_source_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.source</string>
    <string name="datawedge_intent_key_label_type_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.label_type</string>
    <string name="datawedge_intent_key_data_legacy" translatable="false">com.motorolasolutions.emdk.datawedge.data_string</string>

    <string name="title_activity_login" translatable="false">Login</string>


    <!--    For Main Activity-->
    <string name="new_order">New Order</string>
    <string name="settings">Settings</string>
    <string name="orders">Orders</string>
    <string name="login">Login</string>
    <string name="password">password</string>
    <string name="check_orders">Check orders</string>
    <string name="order_number">order number</string>
    <string name="start_time">start time</string>
    <string name="synch">synch</string>
    <string name="menu">menu</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="enter_the_order_number">Enter the order number:</string>
    <string name="create_new_order">Create new order</string>
    <string name="okay">Okay</string>
    <string name="the_order_was_saved">The order was saved</string>
    <string name="finish">Finish</string>


    <!--    For Scan Activity-->


    <!--    For Orders Activity-->


    <!--    For Settings Activity-->



    <!--    For alert dialog-->
    <string name="d_confirm_toDefault">Do you want to go back to default settings?</string>
    <string name="d_confirm_saveSettings">Do you want to save settings?</string>
    <string name="d_confirm_finishOrder">Do you want to finish order?</string>

    <string name="d_result_success">Order was successfully saved</string>
    <string name="d_result_fail">Something wrong</string>
    <string name="d_delete_order">Do you want delete order?</string>
    <string name="d_delete_last_code">Do you want delete last code? It couse deleting of order</string>
    <string name="d_delete_order_without_synch">Delete order without synchronization?</string>



    <!--    For Toast-->
    <string name="toast_order_has_been_saved">Order had been saved</string>
    <string name="toast_settings_reset">Settings have been reset</string>
    <string name="toast_settings_saved">Settings have been saved</string>
    <string name="toast_wrong_login_pw">Wrong login or password</string>
    <string name="toast_empty_order_number">Order number could not be empty</string>
    <string name="toast_order_number_already_exists">Order number already exists</string>
    <string name="toast_code_not_match_filter">The code does not match the filters</string>
    <string name="toast_no_code_in_list">No code was read</string>
    <string name="toast_order_deleted_successfully">Order deleted successfully</string>
    <string name="toast_server_is_not_configured">Server is not configured</string>
    <string name="toast_try_to_synch_with_server">Synchronization with server</string>
    <string name="toast_network_is_not_available">Network is not available</string>
    <string name="toast_server_is_not_available">Server is not available</string>
    <string name="toast_something_wrong_with_server">Something wrong with server</string>
    <string name="toast_order_already_synch">Order already synchronized with server</string>
    <string name="toast_something_wrong">Something wrong</string>
    <string name="toast_configure_server_at_first">Configure server ar first</string>
    <string name="toast_synch_new_orders">Synchronization of new orders</string>
    <string name="toast_clear_synch_orders">Clear synchronized orders</string>


</resources>