<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp"
    android:gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="25sp"
        android:textStyle="bold"
        android:padding="20dp"
        android:text="@string/enter_the_order_number"/>

    <EditText
        android:id="@+id/scan_text_order_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:inputType="text"
        android:hint="@string/order_number"
        android:minHeight="48dp" />

    <Button
        android:id="@+id/scan_btn_do_start_order"
        android:background="@drawable/rounded_button"
        android:textColor="@color/white"
        android:textSize="20sp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_new_order"/>

</LinearLayout>